[package]
name = "toggit"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
billboard = "0.1.0"
dirs = "3.0.1"
env_logger = "0.8.3"
log = "0.4.14"
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
text_io = "0.1.8"
toml = "0.5.8"

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
